--- a/src/app/product-sku/product-sku.component.scss
+++ b/src/app/product-sku/product-sku.component.scss
@@ -191,6 +191,12 @@ body{
   font-family: initial;
   font-size: 15px;
 }
+#paraforSelectedopts{
+  margin-left: 700px;
+  margin-top: -80px;
+  font-family: initial;
+  
+}
 
 @media screen and (min-width:360px) and (max-width:1400px){
   .dialog-content {
