small change in options............

--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -112,7 +112,8 @@
         <button type="button" (click)="addNewCatalog()" id="addnewcatalogbtn" class="btn btn-outline-primary">Add New
           Catalog</button>
       </div>
-
+      <button type="button" id="addoptbtn" class="btn btn-outline-success" (click)="AddOptions()"
+      style="font-family: initial;">Add NewOption</button>
 
       <div mat-dialog-action [align]="'center'">
 
