--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
@@ -101,7 +101,10 @@ body {
     margin-top: 40px;
     font-family: initial;
 }
-
+#addoptbtn{
+    margin-left: 260px;
+    margin-top: -70px;
+}
 @media screen and (min-width: 768px) and (max-width: 1280px) {
     .product-name {
         font-size: large;
