--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
@@ -2,6 +2,9 @@
  *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
  *   All rights reserved.
  */
+ :host {
+  top: 0 !important;
+}
     #form{
         width:1000px;
         height: 550px;
